Added link to GOM.Ai

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="relative w-full h-[2vh] flex items-center justify-between p-10">
             <img id="logo" src="images/logo.png" alt="wispp-logo" class="w-[10vw] md:w-[50px] lg:w-[60px] rounded-[50%] shadow-2xl">
-            <a href="https://erickyuste.github.io/activitygenerator/"><button class="animated-button relative flex items-center cursor-pointer overflow-hidden text-xs md:text-[16px] gap-4 pl-7 pr-8 py-1"><svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
+            <a href="https://erickyuste.github.io/GOM.Ai/"><button class="animated-button relative flex items-center cursor-pointer overflow-hidden text-xs md:text-[16px] gap-4 pl-7 pr-8 py-1"><svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
                 ></path>
