adjusted Khmer variable

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
                     <form action="/action_page.php" name="grade-level" class="flex flex-col">
                         <label for="grade-level" class="text-sm sm:text-md md:text-xl mb-2 text-black cursor-pointer font-bold">Grade Level:</label>
                         <select id="grade-level" name="grade-level" class="text-sm md:text-lg text-gray-700  rounded-md p-2 mb-4 transition ease-in-out duration-150 bg-[#e0e0e0] shadow-2xl transform-gpu">
-                            <option value="Pre-K">Pre-K</option>
+                            <option value="Pre-Kinder">Pre-Kinder</option>
                             <option value="Kinder">Kinder</option>
+                            <option value="Pre-Primary">Pre-Primary</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -72,7 +73,7 @@
                             <option value="Technology - Digital">Technology - Digital</option>
                             <option value="Technology - Design">Technology - Design</option>
                             <option value="Language: Mandarin">Language: Mandarin</option>
-                            <option value="Language: Khmer">Language: Khmer</option>
+                            <option value="Language: Khmer 9Write the entire lesson plan in Khmer">Language: Khmer</option>
                             <option value="Health Education">Health Education</option>
                             <option value="Physical Education">Physical Education</option>
                         </select>
