adjusting khmer variable

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <option value="Technology - Digital">Technology - Digital</option>
                             <option value="Technology - Design">Technology - Design</option>
                             <option value="Language: Mandarin">Language: Mandarin</option>
-                            <option value="Language: Khmer 9Write the entire lesson plan in Khmer">Language: Khmer</option>
+                            <option value="Language: Khmer">Language: Khmer</option>
                             <option value="Health Education">Health Education</option>
                             <option value="Physical Education">Physical Education</option>
                         </select>
