adjusted languages variable

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                             <option value="Visual Arts">The Arts: Visual Arts</option>
                             <option value="Technology - Digital">Technology - Digital</option>
                             <option value="Technology - Design">Technology - Design</option>
-                            <option value="Language: Mandarin">Language: Mandarin</option>
-                            <option value="Language: Khmer">Language: Khmer</option>
+                            <option value="Language: Mandarin (Write the entire lesson plan in Mandarin/Chinese Language)">Language: Mandarin</option>
+                            <option value="Language: Khmer (Write the entire lesson plan in Khmer Language)">Language: Khmer</option>
                             <option value="Health Education">Health Education</option>
                             <option value="Physical Education">Physical Education</option>
                         </select>
